--- a/Musterwebseite/elvira/elvira.html
+++ b/Musterwebseite/elvira/elvira.html
@@ -39,6 +39,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div>
+            <h1>Menü</h1>
             <ul>
                 <li>
                     <a href="#" class="icon1"> Ok let's go</a>
@@ -50,4 +51,7 @@
         </div>
     </div>
 </body>
+<footer>
+    
+</footer>
 </html>
