--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Hallo Welt
-    <section>
-        <a href="https://github.com/">G</a>
-    </section>
+    <header>
+        <h1>Company</h1>
+        <nav>Welcome Prducts About</nav>
+    </header>
+    <main>
+        <section>
+            <h2>We are the best</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quo ipsam labore, nobis eum architecto deserunt doloremque exercitationem ab accusantium, mollitia quod placeat quisquam dolores, temporibus assumenda distinctio nostrum cumque?</p>
+        </section>
+        <section>
+            <h2>Our products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint explicabo velit excepturi architecto enim voluptatum magnam ipsam hic recusandae delectus, officia quae adipisci? Facere nostrum laborum, veniam quidem autem voluptatum.</p>
+        </section>
+    </main>
 </body>
 </html>
