--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <header>
         <h1>Company</h1>
-        <nav>Welcome Prducts About</nav>
+        <nav> 
+            <a href="index.html">Welcome</a>
+            <a href="./index.html">Prducts</a>
+            <a href="./index.html">About</a>   
+        </nav>
     </header>
     <main>
         <section>
