--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <h1>Company</h1>
-        <nav> 
-            <a href="index.html">Welcome</a>
-            <a href="./index.html">Prducts</a>
-            <a href="./index.html">About</a>   
+        <nav>  <!-- Menü -->
+            <a href="index.html" class="active">Welcome</a>
+            <a href="products.html">Products</a>
+            <a href="about.html">About</a>   
         </nav>
     </header>
     <main>
